# labs

./: .gitignore
ai/lab_1/: CMakeLists.txt
ai/lab_1/src/: game.cpp  game.h  main.cpp  main_window.cpp
ai/lab_1/src/log/: log.cpp
ai/lab_1/src/ui/: field_button.cpp  field_button.h  icon.h
ai/lab_2/: CMakeLists.txt  lab_6.py
ai/lab_2/src/: dialog_window.cpp  dialog_window.h  game.cpp  game.h  main.cpp  main_window.cpp  main_window.h  params.cpp  params.h  second_window.cpp  second_window.h
ai/lab_2/src/log/: log.cpp  log.h
ai/lab_2/src/ui/: button.cpp  button.h  color.cpp  color.h  item.cpp  item.h  text.cpp  text.h  text_edit.cpp  text_edit.h
ai/lab_3/: CMakeLists.txt
ai/lab_3/src/: game.cpp  game.h  main_window.cpp  main_window.h
ai/lab_3/src/ui/: button.cpp  button.h  map_item.cpp  map_item.h  text_item.cpp  text_item.h
ai/lab_4/: CMakeLists.txt
ai/lab_4/data/: data.h  data.txt
ai/lab_4/qml/: main.qml
ai/lab_4/src/: item.cpp  item.h  main.cpp
ai/lab_4_with_qml/lab_4/: CMakeLists.txt  df.cpp  df.h  main.qml  wqd.cpp  wqd.h
ai/lab_5/: CMakeLists.txt  main.cpp  mnist_model.xml  train.cpp
ai/lab_5_qt/: CMakeLists.txt
ai/lab_5_qt/src/: main_window.cpp  main_window.h
ai/lab_5_qt/src/nn/: neural.cpp  neural.h
ai/lab_5_qt/src/ui/: button.cpp  button.h  color.cpp  color.h  pixel.cpp  pixel.h
ai/lab_6/: CMakeLists.txt
ai/lab_6/src/: algo.cpp  algo.h  main.cpp  ui.cpp  ui.h
ai/lab_6_enw/: CMakeLists.txt  main.cpp
ai/lab_6_qt/: CMakeLists.txt
ai/lab_6_qt/src/: main.cpp  mainwindow.cpp  mainwindow.h
ai/new_lab_1/src/: game.cpp  game.h  main_window.cpp  main_window.h  player.cpp  player.h
ai/new_lab_1/src/log/: log.h
ai/new_lab_1/src/ui/: field_button.cpp  field_button.h  icon.cpp
optimization_methods/lab_1/: cryptographer.cpp  cryptographer.h  main.cpp  processor.cpp  processor.h  ui.qml
optimization_methods/lab_2/: main.cpp  processor.cpp  ui.qml
optimization_methods/lab_3/: CMakeLists.txt  cryptographer.cpp  cryptographer.h  main.cpp  processor.cpp  processor.h  ui.qml
parallel_prog/lab_1/: lab_1_1.cpp  lab_1_2.cpp
parallel_prog/lab_2/: lab_2_1.cpp
spo/lab_3/: list.c  list.h  main.c  utils.c  utils.h  windows.c  windows.h
spo/lab_3/test_dir/empty_dir/: old_file.cpp
spo/lab_4/: CMakeLists.txt  db.cpp  db.h
spo/lab_4/gtk/: CMakeLists.txt  main.cpp
spo/lab_4/qt/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
