cmake_minimum_required(VERSION 3.10)
project(lab_6 VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
include_directories(src)
add_executable(${PROJECT_NAME} src/main.cpp src/ui.cpp src/algo.cpp src/ui.h src/algo.h)
target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets)